[gd_scene load_steps=22 format=3 uid="uid://b3l4bud0f0giq"]

[ext_resource type="Script" path="res://tscn/player_controller.gd" id="1_kpy62"]
[ext_resource type="Script" path="res://tscn/HUD.gd" id="2_631kg"]
[ext_resource type="Script" path="res://tscn/WeaponsManager.gd" id="2_nsf3l"]
[ext_resource type="Texture2D" uid="uid://cn5vrhdpistd3" path="res://sprites/character/player.png" id="2_oqhib"]
[ext_resource type="Resource" uid="uid://5i8s2s00xios" path="res://weapons/KrissVector.tres" id="3_cts41"]
[ext_resource type="Texture2D" uid="uid://31rjifms47nh" path="res://sprites/weapon/vectorreal.png" id="5_ro03w"]
[ext_resource type="Resource" uid="uid://djl23kngpa0qh" path="res://weapons/Beretta.tres" id="5_xqxry"]
[ext_resource type="Texture2D" uid="uid://bdkd0b3ft7wi6" path="res://sprites/weapon/berettareal.png" id="7_acwft"]

[sub_resource type="Animation" id="Animation_vc070"]
resource_name = "Vector Shoot"
length = 0.05
step = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("KrissVector/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.03, 0.05),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(10, 3), Vector2(9, 3), Vector2(10, 3)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("KrissVector/Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.03, 0.05),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 0.0]
}

[sub_resource type="Animation" id="Animation_h142a"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("KrissVector/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(10, 3)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("KrissVector/Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("KrissVector/Sprite2D:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("Beretta/Sprite2D:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(7, 2)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("Beretta/Sprite2D:rotation")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("Beretta/Sprite2D:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../../../CanvasLayer/VBoxContainer/HBoxContainer/Label:position")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/7/type = "value"
tracks/7/imported = false
tracks/7/enabled = true
tracks/7/path = NodePath("../../../CanvasLayer/VBoxContainer/HBoxContainer/Label:rotation")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="Animation" id="Animation_n2r2v"]
resource_name = "Vector Reload"
length = 1.3
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("KrissVector/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.1, 0.35, 0.55, 0.75, 1, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(10, 3), Vector2(10, 4), Vector2(10, 2.88889), Vector2(10, 2), Vector2(10, 3), Vector2(8, 3), Vector2(10, 3)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("KrissVector/Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.1, 0.35, 0.55, 0.75, 1, 1.3),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, 0.181325, 0.0, -0.0934142, 0.0, 0.0, 0.0]
}

[sub_resource type="Animation" id="Animation_4c5el"]
resource_name = "Vector Activate"
length = 0.1
step = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("KrissVector/Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("KrissVector/Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(10, 3), Vector2(10, 2), Vector2(10, 3)]
}

[sub_resource type="Animation" id="Animation_l0dv6"]
resource_name = "Vector Exit"
length = 0.05
step = 0.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("KrissVector/Sprite2D:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("KrissVector/Sprite2D:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(10, 3), Vector2(10, 5)]
}

[sub_resource type="Animation" id="Animation_dmrrk"]
resource_name = "Vector OOA"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("KrissVector/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(10, 3)]
}

[sub_resource type="Animation" id="Animation_pbc62"]
resource_name = "Beretta Activate"
length = 0.1
step = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Beretta/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(7, 2), Vector2(7, 1), Vector2(7, 2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Beretta/Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.05, 0.1),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, 0.0, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Beretta/Sprite2D:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_g4fse"]
resource_name = "Beretta Exit"
length = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Beretta/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(7, 2), Vector2(7, 4)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Beretta/Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Beretta/Sprite2D:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.05),
"transitions": PackedFloat32Array(1, 1),
"update": 1,
"values": [true, false]
}

[sub_resource type="Animation" id="Animation_t3w5g"]
resource_name = "Beretta Shoot"
length = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Beretta/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.01, 0.05),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(7, 2), Vector2(6, 2), Vector2(7, 2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Beretta/Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.01, 0.05),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [0.0, -0.0783708, 0.0]
}

[sub_resource type="Animation" id="Animation_tb6vd"]
resource_name = "Beretta Reload"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Beretta/Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.200219, 0.6, 0.75, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(7, 2), Vector2(7.26696, 3), Vector2(7.8, 1.27284), Vector2(8, 2), Vector2(7, 2)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Beretta/Sprite2D:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.200219, 0.6, 0.75, 1),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [0.0, -0.115934, -0.049242, 0.0601695, 0.0]
}

[sub_resource type="Animation" id="Animation_6qopb"]
resource_name = "Beretta OOA"
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../../../CanvasLayer/VBoxContainer/HBoxContainer/Label:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../../../CanvasLayer/VBoxContainer/HBoxContainer/Label:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_s76lg"]
_data = {
"Beretta Activate": SubResource("Animation_pbc62"),
"Beretta Exit": SubResource("Animation_g4fse"),
"Beretta OOA": SubResource("Animation_6qopb"),
"Beretta Reload": SubResource("Animation_tb6vd"),
"Beretta Shoot": SubResource("Animation_t3w5g"),
"RESET": SubResource("Animation_h142a"),
"Vector Activate": SubResource("Animation_4c5el"),
"Vector Exit": SubResource("Animation_l0dv6"),
"Vector OOA": SubResource("Animation_dmrrk"),
"Vector Reload": SubResource("Animation_n2r2v"),
"Vector Shoot": SubResource("Animation_vc070")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_jv7vp"]
radius = 9.0

[node name="PlayerController" type="CharacterBody2D"]
script = ExtResource("1_kpy62")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
script = ExtResource("2_631kg")

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer"]
offset_right = 40.0
offset_bottom = 40.0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
layout_mode = 2
text = "Current Weapon: "

[node name="CurrentWeapon" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer"]
layout_mode = 2

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer2"]
layout_mode = 2
text = "Ammo: "

[node name="CurrentAmmo" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer2"]
layout_mode = 2

[node name="HBoxContainer3" type="HBoxContainer" parent="CanvasLayer/VBoxContainer"]
layout_mode = 2

[node name="Label" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer3"]
layout_mode = 2
text = "Weapon Stack: "

[node name="WeaponStack" type="Label" parent="CanvasLayer/VBoxContainer/HBoxContainer3"]
layout_mode = 2

[node name="MainCamera" type="Camera2D" parent="."]
zoom = Vector2(5, 5)

[node name="WeaponsManager" type="Node2D" parent="MainCamera"]
script = ExtResource("2_nsf3l")
_weapon_resources = Array[Resource("res://weapons/weaponresources.gd")]([ExtResource("3_cts41"), ExtResource("5_xqxry")])
Start_Weapons = Array[String](["KrissVector", "Beretta"])

[node name="SpriteRig" type="Node2D" parent="MainCamera/WeaponsManager"]

[node name="KrissVector" type="Node2D" parent="MainCamera/WeaponsManager/SpriteRig"]

[node name="Sprite2D" type="Sprite2D" parent="MainCamera/WeaponsManager/SpriteRig/KrissVector"]
visible = false
z_index = 1
position = Vector2(10, 3)
scale = Vector2(0.970588, 1)
texture = ExtResource("5_ro03w")

[node name="Beretta" type="Node2D" parent="MainCamera/WeaponsManager/SpriteRig"]
visible = false

[node name="Sprite2D" type="Sprite2D" parent="MainCamera/WeaponsManager/SpriteRig/Beretta"]
z_index = 1
position = Vector2(7, 2)
texture = ExtResource("7_acwft")

[node name="AnimationPlayer" type="AnimationPlayer" parent="MainCamera/WeaponsManager/SpriteRig"]
unique_name_in_owner = true
libraries = {
"": SubResource("AnimationLibrary_s76lg")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_jv7vp")

[node name="Sprite2D" type="Sprite2D" parent="."]
texture = ExtResource("2_oqhib")
